modfied the input type  tell to tel

--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
         <strong><label for="ema" >Enter Email</label></strong>
         <input type="email" placeholder="ex: siri@gmail.com" name="ema" id="ema"  requried /> <br /><br />
         <strong><label for="pho" >Enter Phone Number </label></strong>
-        <input type="tell" placeholder="ex: 1234567890" name="pho" id="pho" required minlength="10" maxlength="10"/> <br /><br />
+        <input type="tel" placeholder="ex: 1234567890" name="pho" id="pho" required minlength="10" maxlength="10"/> <br /><br />
        <strong> <label for="joi"> The Date Of Joining </label></strong>
         <input type="date" id="joi" name="joi" value="2025-07-02" readonly/><br /> <br />
         <strong><label for="age"> Enter your Age </label></strong>
