--- a/index1.html
+++ b/index1.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>Fill The Form If You Want To Join In The Fashion Technology Related Courses</h3><br />
+    <div id="f1">
     <form action="data.java" method="get" target="_blank" autocomplete="off" >
        <strong> <label for="nam" >Enter Full Name</label></strong>
         <input type="text" placeholder="ex: Buddharaju Sirisha" name="nam" id="nam" required /> <br /><br />
@@ -61,13 +63,13 @@
         <input type="file" accept=".pdf" placeholder="select the resume" id="res" name="res" required/> <br /><br />
         <strong><label for="que" >Ask If you Have Any Queries</label><br /><br/></strong>
         <textarea id="que" name="que" cols="100" rows="10" placeholder="Ask If You Have any Queries" required></textarea> <br /><br />
-        <input type="submit" value="Submit"/>
-        <input type="reset" value="Reset" />
-        <input type="button" value="button" />
-    </form>
+        <input type="submit" class="but" value="Submit"/>
+        <input type="reset"  class="but" value="Reset" />
+        <input type="button"  class="but" value="button" />
+    </form></div>
     <br /><br />
     <h3>Fill The Form If You Want To Join In The Fashion Technology Related ShortTerm Courses Offline And Online </h3><br />
-    <form action="data1.java" method="get" autocomplete="off" enctype="multipart/form-data">
+    <div id="f2"><form action="data1.java" method="get" autocomplete="off" enctype="multipart/form-data">
       <!-- autocomplete="on means it gives the suggestion we entered before" whent it is set to "off" it don't give suggestions-->
        <!-- enctype="multipart/form-data" itntells browser to encode the form data correctly for file transfers -->
         <strong><label for="na" >Enter Full Name</label></strong>
@@ -121,7 +123,7 @@
         <button type="reset">Reset</button>
         <button type="button"> View</button>
        
-    </form>
+    </form></div>
   
      
 
