checkbox form changed to better once

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         If you have that natural Fashion instinct and inherent talent making you restless and urging
          you to venture into the exciting world of Fashion, <ins>There are Many Institutes to welcome you!
          With a thoughtfully designed competent training course in Fashion Design, </ins><br><br>
-    <img src="fas.jpg" alt="Fashion" width="1500" Height="700">
+    <img src="./fas.jpg" alt="Fashion" width="1500" Height="700">
     <h2><em><q>Craft Your Future in the Fashion Industry with Best Fashion Technology Colleges!</q></em></h2>
     <h3>What is Fashion Design Meaning?</h3>
     <p>                         Fashion Design is a techno-commercial art 
@@ -315,13 +315,15 @@
 
     </table> <br /> <br />
 
-
+<form action="index1.html" method="get" id="che" name>
     <!-- The <fieldset> element is used to group related data in a form.
          The <legend> element defines a caption for the <fieldset> element.-->
     <fieldset> <legend> Application Process</legend>
-        <input type="checkbox" id="i" name="i"><label for="i" required><strong>Click The CheckBox If you want to join in a Fashion Technology Course</strong></label><br /><br />
-        <a href="index1.html"><input type="button" id="q" name="q" value="Next" /></a> 
+        <input type="checkbox" id="i" name="i" required>
+        <label for="i" ><strong>Click The CheckBox If you want to join in a Fashion Technology Course</strong></label><br /><br />
+        <input type="submit" id="q" name="q" value="Next" />
         <input type="hidden"  name="zq" value="Student"></fieldset>
+        </form>
 
 
   
